--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = ">=1.1.0"
 psutil = ">=7.0.0"
 langchain-community = "^0.3.25"
 jinja2 = "^3.1.2"
+urllib3 = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
